# serializer version: 1
# name: test_sensors[sensor.gw2000b_wificb44_main_data_24h_co2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_dioxide',
      'friendly_name': 'GW2000B-WIFICB44_Main Data 24H CO2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_24h_co2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '171',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_absolute-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Absolute',
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_absolute',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1025.74',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_dioxide',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '265',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_24h_pm10_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 24H PM10 AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_24h_pm10_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_24h_pm2_5_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 24H PM2.5 AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_24h_pm2_5_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '36',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_pm10',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '50.9',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_pm10_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 PM10 AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_pm10_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '46',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_pm2_5',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '50.8',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_pm2_5_aqi-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'aqi',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 PM2.5 AQI',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_pm2_5_aqi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '139',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_co2_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data CO2 Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_co2_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '23.5',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_day_wind_max-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Day Wind Max',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_day_wind_max',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3.35',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_dew_point-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Dew Point',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_dew_point',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '6.9',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_feel_like-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Feel Like',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_feel_like',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '22.7',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_indoor_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Indoor Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_indoor_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '36',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_indoor_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Indoor Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_indoor_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '22.6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_outdoor_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Outdoor Humidity',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_outdoor_humidity',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '36',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_outdoor_temp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Outdoor Temp',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_outdoor_temp',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '22.7',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_day-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Day',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_day',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '22.78',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_event-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Event',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_event',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '22.78',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_month-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Month',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_month',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '295.3',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Rate',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_rate',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '10.99',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_week-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Week',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_week',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '161.6',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_rain_year-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Rain Year',
      'icon': 'mdi:water',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPrecipitationDepth.INCHES: 'in'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_rain_year',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '295.3',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_relative-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Relative',
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_relative',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1025.74',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_solar_irradiance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'illuminance',
      'friendly_name': 'GW2000B-WIFICB44_Main Data Solar Irradiance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfIrradiance.WATTS_PER_SQUARE_METER: 'W/m²'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_solar_irradiance',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_uv_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'illuminance',
      'friendly_name': 'GW2000B-WIFICB44_Main Data UV-Index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'Index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_uv_index',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Direction',
      'icon': 'mdi:weather-windy',
      'unit_of_measurement': '°',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_direction',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '275',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Gust',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_gust',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2.06',
  })
# ---
# name: test_sensors[sensor.gw2000b_wificb44_main_data_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'GW2000B-WIFICB44_Main Data Wind Speed',
      'icon': 'mdi:weather-windy',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.MILES_PER_HOUR: 'mph'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.gw2000b_wificb44_main_data_wind_speed',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2.06',
  })
# ---
